Added prettier to extension recommendations

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
 	"recommendations": [
 		"ritwickdey.liveserver",
-		"bierner.markdown-mermaid"
+		"bierner.markdown-mermaid",
+		"esbenp.prettier-vscode"
 	]
 }
